objects/GoogleAPIAudit__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting to register what made the API Call to google API for finding the location.</description>
    <fields>
        <fullName>API_Call_Made_At__c</fullName>
        <inlineHelpText>What DateTime the call was made</inlineHelpText>
        <label>API Call Made At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoggedIn_Username__c</fullName>
        <inlineHelpText>Who was the logged in user who initiated the API Call</inlineHelpText>
        <label>LoggedIn Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatID__c</fullName>
        <inlineHelpText>Lead or Account record ID which fired the API Call</inlineHelpText>
        <label>WhatID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GoogleAPIAudit</label>
</CustomObject>